fixed posts border, added what's happening, fixed alignment of stats

--- a/src/home/index.css
+++ b/src/home/index.css
@@ -9,9 +9,21 @@
 .sf-home-post-border {
     border: 1px solid #000000;
     border-top: 0px;
-    padding: 25px;
+    border-left: 0px;
+    border-right: 0px;
+    padding: 20px;
+}
+
+.sf-home-border {
+    border: 1px solid #000000;
+    padding: 0px;
+    border-bottom: 0px;
 }
 
 .sf-home-min-width {
     min-width: 31rem;
+}
+
+.sf-no-link-decor {
+    text-decoration: none;
 }
